--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "prepare": "is-ci || husky install",
     "types-commerce": "npx ts-node ./scripts/types-commerce.ts",
     "check-translation-files": "npx ts-node ./scripts/check-translation-files.ts",
-    "ausweisapp2-fix-postinstall": "rm -rf node_modules/@sap/react-native-ausweisapp2-wrapper/ios/Frameworks/AusweisApp2-SDK-iOS/ && cd node_modules/@sap/react-native-ausweisapp2-wrapper && yarn postinstall && cd ../../.. && yarn podinstall",
     "storybook-generate": "sb-rn-get-stories"
   },
   "dependencies": {
@@ -55,7 +54,6 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.1",
-    "@sap/react-native-ausweisapp2-wrapper": "1.3.4",
     "async-mutex": "^0.4.0",
     "axios": "^1.8.3",
     "firebase": "^11.4.0",
@@ -153,6 +151,7 @@
     "is-ci": "^3.0.1",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "msw": "^2.0.1",
     "prettier": "^3.5.3",
     "react-dom": "^19.0.0",
@@ -222,7 +221,7 @@
     "cross-spawn": "7.0.6",
     "micromatch": "4.0.8",
     "brace-expansion": "2.0.2"
-    },
+  },
   "reactNativePermissionsIOS": [
     "LocationAccuracy",
     "LocationAlways",
